--- a/src/main/resources/templates/fragments/logo.html
+++ b/src/main/resources/templates/fragments/logo.html
@@ -1,3 +1,3 @@
 <header>
-    <h1>CyVerse Authentication Service</h1>
+    <div id="cyverseLogo_white"><img src="../images/cyverse_white.png" height="92">
 </header>
