--- a/src/main/resources/templates/fragments/logo.html
+++ b/src/main/resources/templates/fragments/logo.html
@@ -1,3 +1,3 @@
 <header>
-    <div id="cyverseLogo_white"><img src="../images/cyverse_white.png" height="92">
+  <div id="cyverseLogo_white" height="92">
 </header>
