CORE-68: changes to make the UI customizations compatible with CAS 5.3.7

--- a/src/main/resources/static/themes/cyverse/css/cas-1-0-1.css
+++ b/src/main/resources/static/themes/cyverse/css/cas-1-0-1.css
@@ -377,7 +377,7 @@ h6, .h6 {
   color: white; }
 
 #content {
-  background: #fff;
+  background: transparent;
   padding: 20px;
   border-radius: 2px; }
 
