--- a/src/main/resources/templates/casLoginView.html
+++ b/src/main/resources/templates/casLoginView.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 
 <head>
-    <title th:text="#{cas.login.pagetitle}"></title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+
+    <title th:text="#{cas.login.pagetitle}">CAS Acceptable Use Policy View</title>
+    <link href="../../static/css/cas.css" rel="stylesheet" th:remove="tag" />
+
 </head>
 
-<body id="cas" class="login">
-    <div layout:fragment="content">
-        <div class="row">
-            <div id="notices" class="col-sm-12 col-md-6 col-md-push-6">
-                <div th:replace="fragments/insecure"/>
-                <div th:replace="fragments/defaultauthn"/>
-                <div th:replace="fragments/cookies"/>
-                <div th:replace="fragments/serviceui"/>
-                <div th:replace="fragments/cyverse-resources-list" />
-                <div th:replace="fragments/loginProviders" />
+<body class="login">
+<main role="main" class="container mt-3 mb-3">
+    <div layout:fragment="content" class="row">
+        <div class="col-md">
+            <div th:replace="fragments/loginform :: loginform"><a href="fragments/loginform.html">Login Form goes
+                here</a></div>
+        </div>
+        <div id="notices" class="col-md mt-3 mt-md-0">
+            <div th:replace="fragments/insecure :: insecure"><a href="fragments/insecure.html">insecure alert goes
+                here</a></div>
+            <div th:replace="fragments/defaultauthn :: staticAuthentication">
+                <a href="fragments/defaultauthn.html">defaultAuthn</a>
+                fragment
             </div>
-            <div class="col-sm-12 col-md-6 col-md-pull-6">
-                <div th:replace="fragments/loginform" />
+            <div th:replace="fragments/cookies :: cookiesDisabled"><a href="fragments/cookies.html">cookies</a> fragment
+            </div>
+            <div th:replace="fragments/serviceui :: serviceUI"><a href="fragments/serviceui.html">service ui</a> fragment</div>
+            <div th:replace="fragments/loginProviders :: loginProviders"><a href="fragments/loginProviders.html">loginProviders</a>
+                fragment
+            </div>
+            <div th:replace="fragments/cyverse-resources-list :: cyverse-resource-list">
+                <a href="fragments/cyverse-resources-list.html">cyverse-resource</a> list fragment
             </div>
         </div>
     </div>
+</main>
 </body>
 </html>
