CORE-68: change the text color in the header just above the login form

--- a/src/main/resources/static/themes/cyverse/css/cas-1-0-1.css
+++ b/src/main/resources/static/themes/cyverse/css/cas-1-0-1.css
@@ -3285,6 +3285,8 @@ tbody.collapse.show {
     border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0; }
   .card-header + .list-group .list-group-item:first-child {
     border-top: 0; }
+  .card-header h2 {
+    color: black; }
 
 .card-footer {
   padding: 0.75rem 1.25rem;
